@@ -58,7 +58,7 @@ TESTS = run-arextract.sh run-arsymtest.sh newfile test-nlist \
 	run-elflint-test.sh run-elflint-self.sh run-ranlib-test.sh \
 	run-ranlib-test2.sh run-ranlib-test3.sh run-ranlib-test4.sh \
 	run-addrscopes.sh run-strings-test.sh run-funcscopes.sh \
-	run-find-prologues.sh run-allregs.sh
+	run-find-prologues.sh run-allregs.sh run-readelf-test1.sh
 # run-show-ciefde.sh
 
 if !STANDALONE
@@ -94,7 +94,7 @@ EXTRA_DIST = run-arextract.sh run-arsymtest.sh \
 	     testfile20.bz2 testfile20.index.bz2 \
 	     testfile21.bz2 testfile21.index.bz2 \
 	     testfile22.bz2 testfile23.bz2 testfile24.bz2 testfile25.bz2 \
-	     coverage.sh test-subr.sh test-wrapper.sh
+	     coverage.sh test-subr.sh test-wrapper.sh run-readelf-test1.sh
 
 installed_TESTS_ENVIRONMENT = libdir=$(DESTDIR)$(libdir) \
 			      bindir=$(DESTDIR)$(bindir) \
