@@ -1,3 +1,9 @@
+2005-12-10  Ulrich Drepper  <drepper@redhat.com
+
+	* run-readelf-test1.sh: New file.
+	* Makefile.am (TESTS): Add run-readelf-test1.sh.
+	(EXTRA_DIST): Likewise.
+
 2005-11-25  Roland McGrath  <roland@redhat.com>
 
 	* coverage.sh: Given -v argument, print names of unused files.
